<resources>
    <string name="app_name">Finland &amp; Weather</string>
    <string name="good_evening">Good evening,</string>
    <string name="lahti">Lahti</string>
    <string name="todo">TODO</string>
    <string name="search_for_any_city">Search For Any City</string>
    <string name="get">Get</string>
    <string name="homebutton">TODO</string>
    <string name="quizbutton">TODO</string>
    <string name="settingbutton">TODO</string>
    <string name="search_for_any_city_or_country">Search for any city or country</string>
    <string name="click_here">Click here</string>
</resources>